--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div class="settings">
+        <button id="erase">Erase</button>
+        <button id="pen">Pen</button>
+        <button id="size">Size</button>
+      </div>
     <div id="container">
         
     </div>
